--- a/index.css
+++ b/index.css
@@ -103,6 +103,7 @@ h2 {
 .history-row {
     margin-left: 1rem;
     margin-top: 1rem;
+    page-break-inside: avoid;
 }
 .company {
     display: flex;
@@ -194,6 +195,7 @@ a:active {
 .section {
     margin-left: 3rem;
     margin-top: 4rem;
+    page-break-inside: avoid;
 }
 .col-name {
     display: inline-block;
